plugins {
    id 'java'
    id 'application'
}

mainClassName = "ru.otus.hw04.GcDemo"

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

dependencies {
    implementation 'org.apache.logging.log4j:log4j-core' 
    implementation 'org.apache.commons:commons-csv' 
}

application {
    applicationDefaultJvmArgs = []
    // applicationDefaultJvmArgs +='-XX:+UseSerialGC' // -8
    // applicationDefaultJvmArgs +='-XX:+UseParallelGC' // -9
    // applicationDefaultJvmArgs +='-XX:ParallelGCThreads=8' //38
    //
    applicationDefaultJvmArgs +='-XX:+UseConcMarkSweepGC' // -10
    ///
    // applicationDefaultJvmArgs +='-XX:+UseG1GC' // -7
    ///
    // applicationDefaultJvmArgs +='-XX:+UnlockExperimentalVMOptions'
    // applicationDefaultJvmArgs +='-XX:+UseZGC' //41
    // applicationDefaultJvmArgs +='-XX:+UnlockDiagnosticVMOptions'
    // applicationDefaultJvmArgs +='-XX:+ZProactive'

    applicationDefaultJvmArgs +='-Xms128m'
    applicationDefaultJvmArgs +='-Xmx128m'
    // applicationDefaultJvmArgs +='-Xlog:gc=debug:file=./logs/gc-%p-%t.log:tags,uptime,time,level:filecount=5,filesize=10m'
    // applicationDefaultJvmArgs +='-XX:+HeapDumpOnOutOfMemoryError'
    // applicationDefaultJvmArgs +='-XX:HeapDumpPath=./logs/dump'
}
